feat: display the mxGraph version in the page footer
Also load the js script with defer

--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,17 @@
 			border: gray 1px solid;
 			overflow: hidden;
 		}
+		footer {
+			position: relative;
+			top: 2rem;
+		}
 	</style>
+	<script defer src='bundle.js'></script>
 </head>
 <body>
 	<h1>mxGraph Javascript example bundled by Rollup</h1>
 	<p>Display a test graph.</p>
 	<div id="graph-container"></div>
-	<script src='bundle.js'></script>
+	<footer></footer>
 </body>
 </html>
